fixed spacing:

--- a/backend/static/css/styles.css
+++ b/backend/static/css/styles.css
@@ -52,6 +52,6 @@
   text-transform: uppercase;
   font-size: clamp(1.5rem, 4rem + 1vw, 6.5rem);
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
-  padding-top: 3rem;
+  padding-top: 1.8rem;
   
 }
